# Evently-Windows-App

env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  jp.py  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
eventlyapp/: pyproject.toml
