[project]
name = "eventlyapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishika-dotcom",email = "isbika2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all] (>=0.27.6,<0.28.0)",
    "flet-route (>=0.3.3,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.0,<12.0.0)",
    "boto3 (>=1.37.24,<2.0.0)"
]

[tool.poetry]
packages = [{include = "eventlyapp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
